--- a/src/bt_nodes/motion/config/motion.yaml
+++ b/src/bt_nodes/motion/config/motion.yaml
@@ -1,9 +1,6 @@
 nav_node:
   ros__parameters:
     use_sim_time: True
-    bt_xml_file: spin.xml
+    bt_xml_file: nav.xml
     plugins:
     - navigate_to_bt_node
-    - navigate_through_bt_node
-    - spin_bt_node
-    - get_angle_bt_node
